--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,4 @@
 name = "black-angus-restaurant"
 compatibility_date = "2024-12-04"
 pages_build_output_dir = ".vercel/output/static"
+compatibility_flags = ["nodejs_compat"]
