--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
+    "@netlify/plugin-nextjs": "^5.15.1",
     "next": "^16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
